# Autotools-with-Catch2

./: .gitignore  Makefile.am  README.md  compile_commands.json  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
include/testBuild/Input/: Input.hpp
include/testBuild/Poly/: Poly.hpp
src/: main.cpp
src/.deps/: main.Po
src/Input/: Input.cpp
src/Input/.deps/: Input.Po
src/Poly/: Poly.cpp
src/Poly/.deps/: Poly.Po
tests/.deps/: main-test.Po
tests/Input/: Input_test.cpp  configure.scan
tests/Input/.deps/: Input_test.Po
tests/Poly/: Poly_test.cpp
tests/Poly/.deps/: Poly_test.Po
